Agregado connection, auth, login y singup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sistema de inventario para una bodega de retail ",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "Inventario"
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql-promise": "^5.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "promise-mysql": "^4.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
