--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "inventario-backend",
   "version": "0.0.1",
-  "description": "Sistema de inventario para una bodega de retail ",
+  "description": "Api Sistema de inventario para una bodega de retail",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "Inventario"
@@ -21,5 +21,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
